Bug 3912 - pnpacpi rsparser bug
Summary: pnpacpi rsparser bug
Status: CLOSED CODE_FIX
Alias: None
Product: ACPI
Classification: Unclassified
Component: Other (show other bugs)
Hardware: i386 Linux
: P2 high
Assignee: acpi_other
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2004-12-17 08:28 UTC by CASTET Matthieu
Modified: 2005-07-24 19:18 UTC (History)
1 user (show)

See Also:
Kernel Version: 2.6.10rc2
Subsystem:
Regression: ---
Bisected commit-id:


Attachments
patch that correct the bug (1.10 KB, patch)
2004-12-17 08:30 UTC, CASTET Matthieu
Details | Diff
updated patch from matthieu (1.30 KB, patch)
2005-03-25 08:30 UTC, Len Brown
Details | Diff

Description CASTET Matthieu 2004-12-17 08:28:28 UTC
The possible resource are not well parsed. See :
http://marc.theaimsgroup.com/?l=linux-kernel&m=110106097404193&w=2
Comment 1 CASTET Matthieu 2004-12-17 08:30:50 UTC
Created attachment 4275 [details]
patch that correct the bug

Parse indep option if there are after dependant options.

It will also report error if the _PRS returned by BIOS has bug (multiple 'end
of resources').
Comment 2 Len Brown 2005-03-25 08:30:31 UTC
Created attachment 4798 [details]
updated patch from matthieu
Comment 3 Len Brown 2005-03-25 08:31:50 UTC
applied updated patch from Matthieu to acpi-test tree 
Comment 4 Shaohua 2005-07-24 19:18:38 UTC
Patch is in Linus's tree. Closed.

Note You need to log in before you can comment on or make changes to this bug.